--- a/Proiect_DAW_Cinemavazut.csproj
+++ b/Proiect_DAW_Cinemavazut.csproj
@@ -18,6 +18,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+    <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.19.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cinemavazut_UnitTests\Cinemavazut_UnitTests.csproj" />
   </ItemGroup>
 
 </Project>
